# portal_analise_de_dados_erwin

./: .env  .gitignore  README.md  comands.txt  pyproject.toml  requirements.txt
app/: __init__.py  api.py  app.py  dashboards.py  gulpfile.js  key_vault.py  layouts.py  package-lock.json  package.json  pages.py
app/src/js/: app.js  layout.js  plugins.js
app/src/js/pages/: apexcharts-area.init.js  apexcharts-bar.init.js  apexcharts-boxplot.init.js  apexcharts-bubble.init.js  apexcharts-candlestick.init.js  apexcharts-column.init.js  apexcharts-funnel.init.js  apexcharts-heatmap.init.js  apexcharts-line.init.js  apexcharts-mixed.init.js  apexcharts-pie.init.js  apexcharts-polararea.init.js  apexcharts-radar.init.js  apexcharts-radialbar.init.js  apexcharts-scatter.init.js  (+78 more)
app/src/scss/: _variables-dark.scss  _variables.scss  app.scss  bootstrap.scss  icons.scss
app/static/css/: app-rtl.min.css  app.css  app.min.css
app/static/js/: app.js
app/static/json/: geojs-35-mun.json  pessoas.json
app/templates/dashboards/: erwin_dm.html  index.html  mapa_efetivo.html
app/templates/layouts/: layouts-detached.html  layouts-horizontal.html  layouts-two-column.html  layouts-vertical-hovered.html
app/templates/pages/: pages-coming-soon.html  pages-contacts.html  pages-faqs.html  pages-maintenance.html  pages-pricing.html  pages-privacy-policy.html  pages-profile-settings.html  pages-profile.html  pages-starter.html  pages-term-conditions.html  pages-timeline.html
app/templates/partials/: base.html  customizer.html  footer.html  page-title.html  sidebar.html  topbar.html
(+49 files in other folders)
