[project]
name = "portal_analise_de_dados"
version = "0.1.0"
description = "Portal para Análise de Dados erwin"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker==1.9.0",
    "click==8.2.0",
    "colorama==0.4.6",
    "flask==3.1.1",
    "flask-login==0.6.3",
    "flask-restx>=1.3.0",
    "flask-sqlalchemy==3.1.1",
    "flask-swagger-ui>=5.21.0",
    "flask-wtf==1.2.2",
    "greenlet==3.2.2",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "pyodbc>=5.2.0",
    "pyrfc3339==2.0.1",
    "python-dotenv==1.1.0",
    "sqlalchemy==2.0.41",
    "typing-extensions==4.13.2",
    "werkzeug==3.1.3",
    "wtforms==3.2.1",
]

# Se você tiver outras seções como [build-system], elas permaneceriam aqui.
# Exemplo:
# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"